[project]
name = "pdm-mina-workspace" # won't publish to pypi
version = "0.0.1"
description = "multi-publish for a series of packages which from a python package"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "pdm>=2.5.0",
    "mina-build>=0.2.1",
    "twine>=4.0.0",
    "tomli>=1.1.0; python_version < \"3.11\"",
    "pdm-backend>=2.1.0",
    "editables>=0.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "devtools>=0.8.0",
]


[build-system]
requires = ["mina-build>=0.2.6", "editables"]
build-backend = "mina.backend"

[project.entry-points.pdm]
mina = "mina.plugin:ensure_pdm"

[tool.mina]
enabled = true
override-global = false  # default value


[tool.mina.packages."backend"]
override = false
includes = [
    "mina/backend"
]
raw-dependencies = []
# dev-dependencies is owned by workspace.


[tool.mina.packages."backend".project]
name = "mina-build"
version = "0.5.1"
description = "build backend for Mina Package Structure"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "pdm-backend",
    "tomli",
    "editables"
]
requires-python = ">=3.9"
readme = "README.build.md"
license = {text = "MIT"}


[tool.mina.packages."cli-pdm"]
includes = [
    "mina"
]
excludes = [
    "mina/backend"
]

[tool.mina.packages."cli-pdm".project]
name = "pdm-mina"
version = "0.3.0"
dependencies = [
    "pdm",
    "mina-build",
    "tomli"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
entry-points = {pdm = {mina = "mina.plugin:ensure_pdm"}}
