[project]
name = "pdm-mina"
version = "0.3.2"
requires-python = ">=3.9"
readme = "README.md"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "devtools>=0.8.0",
    "pdm>=2.10.0",
    "pdm-backend>=2.1.0",
]

[tool.pdm.build]
includes = [
    "src/mina"
]
custom-hook = "src/mina_backend/hooks.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pdm]
mina = "mina.plugin:ensure_pdm"

[tool.mina]
enabled = true
override-global = false  # default value

[tool.mina.packages."cli-pdm"]

[tool.mina.packages.backend]
includes = [
    "src/mina_backend"
]

[tool.mina.packages.backend.project]
name = "mina-build"
version = "0.6.0"
description = "build backend for Mina Package Structure"
dependencies = [
    "pdm-backend"
]
readme = "README.build.md"

[tool.mina.packages.backend.project.entry-points."pdm.build.hook"]
mina = "mina_backend.hooks"

